adds wave animation to introduction

--- a/docs/pages/get-started/introduction.mdx
+++ b/docs/pages/get-started/introduction.mdx
@@ -7,8 +7,9 @@ hideTOC: true
 import { BoxLink } from '~/ui/components/BoxLink';
 import { CALLOUT } from '~/ui/components/Text';
 import { BookOpen02Icon, Earth01Icon } from '@expo/styleguide-icons';
+import { HelloWave } from '~/scenes/get-started/introduction/HelloWave';
 
-## 👋 Welcome!
+## Welcome! <HelloWave />
 
 Expo is framework that makes developing Android and iOS apps easier. Our frameowork provides file-based routing, a standard library of native modules, and much more. Expo is open source with an active community on [GitHub](https://github.com/expo/expo) and [Discord](https://chat.expo.dev).
 
