skeleton of project features

--- a/docs/pages/get-started/create-a-project.mdx
+++ b/docs/pages/get-started/create-a-project.mdx
@@ -5,6 +5,7 @@ hideTOC: true
 ---
 
 import { Terminal } from '~/ui/components/Snippet';
+import { TemplateFeatures } from '~/scenes/get-started/create-a-project/TemplateFeatures';
 
 Create a project with:
 
@@ -12,14 +13,13 @@ Create a project with:
 
 > You can use another template by adding the `--template` flag.
 
-The default project includes:
+## Features
 
-- [Navigation](/router/introduction/)
-- [Themes](/develop/user-interface/color-themes)
-- [Animations](/develop/user-interface/animation/)
-- [Unit tests](/develop/unit-testing)
-- [Fonts](/develop/user-interface/fonts/)
-- [Images](/versions/latest/sdk/image/)
+The default project template has the following features:
+
+<TemplateFeatures />
+
+## File structure
 
 Here’s an overview of the project’s structure:
 
