--- a/docs/pages/get-started/create-a-project.mdx
+++ b/docs/pages/get-started/create-a-project.mdx
@@ -12,13 +12,10 @@ import { ProjectStructure } from '~/scenes/get-started/create-a-project/ProjectS
 
 System requirements:
 
-- [Git](https://git-scm.com)
-- [Node.js (LTS)](https://nodejs.org/en/)
-- [Watchman](https://facebook.github.io/watchman/docs/install#buildinstall) for Linux or macOS users
+- [Node.js (LTS)](https://nodejs.org/en/).
+- macOS, Windows (Powershell and WSL 2), and Linux are supported.
 
----
-
-We recommend creating a project with our default project template:
+We recommend creating a project with the default project template, which includes example code to help get you started. To create a new project, run the following command:
 
 <Terminal cmd={['$ npx create-expo-app@latest']} />
 
@@ -35,3 +32,7 @@ The default project template has the following features:
 Below, you can get familiar with the default project's file structure:
 
 <ProjectStructure />
+
+### Next steps
+
+You have a project. Now it's time to set up your development environment so that you can start developing.
