--- a/docs/scenes/get-started/set-up-your-environment/instructions/androidPhysicalDevelopmentBuild.mdx
+++ b/docs/scenes/get-started/set-up-your-environment/instructions/androidPhysicalDevelopmentBuild.mdx
@@ -1,17 +1,13 @@
 import { Step } from '~/ui/components/Step';
 import { Terminal } from '~/ui/components/Snippet';
 
-{/* - Install EAS CLI - Make a build with `eas build --profile development` - Download the .apk - Install the .apk on your device - Might need to have developer mode turned on? */}
-
-Read the instructions below to create a development build of your app for your Android device.
-
-## Create a development build
+## Set up an Android device with a development build
 
 <Step label="1">
 
 ### Install EAS CLI
 
-To build your app, you will need to install the EAS CLI. You can do this by running the following command in your terminal:
+To build your app, you will need to install EAS CLI. You can do this by running the following command in your terminal:
 
 <Terminal cmd={['$ npm install -g eas-cli']} />
 
@@ -23,7 +19,7 @@ To build your app, you will need to install the EAS CLI. You can do this by runn
 
 To build your app, you will need to create an Expo account and login to the EAS CLI.
 
-1. [Sign up](https://expo.dev/signup) for an Expo account
+1. [Sign up](https://expo.dev/signup) for an Expo account.
 2. Run the following command in your terminal to login to the EAS CLI:
    <Terminal cmd={['$ eas login']} />
 
@@ -43,5 +39,12 @@ Run the following command to create an EAS config in your project:
 
 Run the following command to create a development build:
 
-<Terminal cmd={['$ eas build --platform android']} />
+<Terminal cmd={['$ eas build --platform android --profile development']} />
+</Step>
+
+<Step label="5">
+### Install the development build on your device
+
+After the build is complete, scan the QR code in your terminal or open the link on your device. Tap "Install" to download the build onto your device, then tap "Open" to install it.
+
 </Step>
