--- a/docs/scenes/get-started/set-up-your-environment/instructions/androidSimulatedExpoGo.mdx
+++ b/docs/scenes/get-started/set-up-your-environment/instructions/androidSimulatedExpoGo.mdx
@@ -1,3 +1,9 @@
-## Android emulator with Expo Go
+import AndroidEmulatorInstructions from './_androidEmulatorInstructions.mdx';
 
-TODO
+## Set up an Android emulator with Expo Go
+
+<AndroidEmulatorInstructions />
+
+## Install Expo Go
+
+When you start a development server with `npx expo start` on the [start developing](/get-started/start-developing) page, press <kbd>a</kbd> to open the Android emulator. Expo CLI will install Expo Go automatically.
