--- a/docs/scenes/get-started/set-up-your-environment/instructions/iosSimulatedExpoGo.mdx
+++ b/docs/scenes/get-started/set-up-your-environment/instructions/iosSimulatedExpoGo.mdx
@@ -1,3 +1,9 @@
+import IosSimlatorInstructions from './_iosSimulatorInstructions.mdx';
+
 ## iOS Simulator with Expo Go
 
-TODO
+<IosSimlatorInstructions />
+
+## Install Expo Go
+
+When you start a development server with `npx expo start` on the [start developing](/get-started/start-developing) page, press <kbd>i</kbd> to open the iOS simulator. Expo CLI will install Expo Go automatically.
