adds start-developing

--- a/docs/pages/get-started/create-a-project.mdx
+++ b/docs/pages/get-started/create-a-project.mdx
@@ -31,6 +31,6 @@ Below, you can get familiar with the default project's file structure:
 
 <ProjectStructure />
 
-### Next steps
+## Next steps
 
 You have a project. Now it's time to set up your development environment so that you can start developing.
