--- a/docs/pages/get-started/set-up-your-environment.mdx
+++ b/docs/pages/get-started/set-up-your-environment.mdx
@@ -22,10 +22,10 @@ We recommend development builds. A development build is a build of your app that
 
 <DevelopmentModeForm />
 
-{/* So, we need some radio buttons for each of the choices above. Each radio button should add a URL param so that you can link to a specific part of this page. Probably: /get-started/set-up-your-environment?device=physical&platform=android&mode=development Then we can have a section for each of the choices above. */}
-
-{/* Vercel asks you to make an account in their tutorial, you just don't need to immediately to get started. There could be another query param that is like buildEnv local or EAS */}
-
 ---
 
 <DevelopmentEnvironmentInstructions />
+
+## Next steps
+
+You have a project and a development environment. Now it's time start developing.
