--- a/docs/scenes/get-started/set-up-your-environment/instructions/_androidEmulatorInstructions.mdx
+++ b/docs/scenes/get-started/set-up-your-environment/instructions/_androidEmulatorInstructions.mdx
@@ -4,7 +4,7 @@ import { Step } from '~/ui/components/Step';
 import { Tabs, Tab } from '~/ui/components/Tabs';
 import { Terminal } from '~/ui/components/Snippet';
 
-## Set up an Android emulator
+## Set up Android Studio
 
 <Tabs>
 
