--- a/docs/scenes/get-started/set-up-your-environment/instructions/iosSimulatedDevelopmentBuild.mdx
+++ b/docs/scenes/get-started/set-up-your-environment/instructions/iosSimulatedDevelopmentBuild.mdx
@@ -43,7 +43,7 @@ Run the following command to create an EAS config in your project:
 <Step label="4">
 ### Adjust your build profile
 
-To create a simulator compatible development build, you'll need to update your build profile to set the `ios.simulator` property to `true`:
+To create a simulator-compatible development build, you'll need to update your build profile in **eas.json** to set the `ios.simulator` property to `true`:
 
 ```json eas.json
 {
