--- a/docs/pages/get-started/start-developing.mdx
+++ b/docs/pages/get-started/start-developing.mdx
@@ -1,6 +1,76 @@
 ---
 title: Start developing
-description: TODO
+description: Make your first change to an Expo project and see it live on your device.
 ---
 
-Run `npx expo start`...
+import { Terminal } from '~/ui/components/Snippet';
+import { Collapsible } from '~/ui/components/Collapsible';
+import ImageSpotlight from '~/components/plugins/ImageSpotlight';
+import { Step } from '~/ui/components/Step';
+import { BoxLink } from '~/ui/components/BoxLink';
+import { BookOpen02Icon, GraduationHat02Icon } from '@expo/styleguide-icons';
+
+<Step label="1">
+## Start a development server
+To start the development server, run the following command:
+
+<Terminal cmd={['$ npx expo start']} />
+
+</Step>
+
+<Step label="2">
+## Open the app on your device
+
+After running the command above, you will see a QR code in your terminal. You can scan this QR code to open the app on your device.
+
+If you're using an Android emulator or iOS simulator, you can press <kbd>a</kbd> or <kbd>i</kbd> respectively to open the app.
+
+<Collapsible summary="Having problems?">
+
+First, make sure you are on the same Wi-Fi network on your computer and your device.
+
+If it still doesn't work, it may be due to the router configuration &mdash; this is common for public networks. You can work around this by choosing the **Tunnel** connection type when starting the development server, then scanning the QR code again.
+
+<Terminal cmd={['$ npx expo start --tunnel']} />
+
+> Using the **Tunnel** connection type will make the app reloads considerably slower than on **LAN** or **Local**, so it's best to avoid tunnel when possible. You may want to install an emulator/simulator to speed up development if **Tunnel** is required for accessing your machine from another device on your network.
+
+</Collapsible>
+
+</Step>
+
+<Step label="3">
+
+## Make your first change in App.js
+
+Now, all the steps are completed to get started, you can open **App.js** file in your code editor and change the contents of the existing `<Text>` to `Hello, world!`. You are going to see it update on your device.
+
+Amazing, progress! You now have the Expo toolchain running on your machine, can edit the source code for a project, and see the changes live on your device.
+
+<Collapsible summary="Changes not showing up on your device?">
+
+Expo Go is configured by default to automatically reload the app whenever a file is changed, but let's make sure to go over the steps to enable it in case somehow things aren't working.
+
+- Make sure you have the [development mode enabled in Expo CLI](/workflow/development-mode#development-mode).
+- Close the Expo app and reopen it.
+- Once the app is open again, shake your device to reveal the developer menu. If you are using an emulator, press <kbd>Ctrl</kbd> + <kbd>M</kbd> for Android or <kbd>Cmd ⌘</kbd> + <kbd>D</kbd> for iOS.
+- If you see **Enable Fast Refresh**, press it. If you see **Disable Fast Refresh**, dismiss the developer menu. Now try making another change.
+
+  <ImageSpotlight
+    alt="Developer menu in Expo Go app."
+    src="/static/images/get-started/developer-menu.png"
+    style={{ maxWidth: 720 }}
+  />
+
+</Collapsible>
+
+</Step>
+
+## Next step
+
+<BoxLink
+  title="Tutorial"
+  description="If you are new to Expo, learn more about the ecosystem by creating a universal app that runs on Android, iOS, and web."
+  href="/tutorial/introduction"
+  Icon={GraduationHat02Icon}
+/>
