updates file location

--- a/docs/pages/get-started/start-developing.mdx
+++ b/docs/pages/get-started/start-developing.mdx
@@ -41,11 +41,9 @@ If it still doesn't work, it may be due to the router configuration &mdash; this
 
 <Step label="3">
 
-## Make your first change in App.js
+## Make your first change
 
-Now, all the steps are completed to get started, you can open **App.js** file in your code editor and change the contents of the existing `<Text>` to `Hello, world!`. You are going to see it update on your device.
-
-Amazing, progress! You now have the Expo toolchain running on your machine, can edit the source code for a project, and see the changes live on your device.
+Open the **app/(tabs)/index.tsx** file in your code editor and make a change.
 
 <Collapsible summary="Changes not showing up on your device?">
 
