--- a/docs/scenes/get-started/create-a-project/TemplateFeatures/features/themes.mdx
+++ b/docs/scenes/get-started/create-a-project/TemplateFeatures/features/themes.mdx
@@ -1,3 +1,5 @@
-### Light and dark modes
+import { RawH3 } from '~/ui/components/Text';
+
+<RawH3>Light and dark modes</RawH3>
 
 This template has light and dark mode support. The `useColorScheme()` hook lets you inspect what the user's current color scheme is, so that you can adjust UI colors accordingly.
