--- a/docs/scenes/get-started/create-a-project/ProjectStructure/files/constants.mdx
+++ b/docs/scenes/get-started/create-a-project/ProjectStructure/files/constants.mdx
@@ -1,3 +1,5 @@
-### constants
+import { RawH3 } from '~/ui/components/Text';
+
+<RawH3>constants</RawH3>
 
 Contains **Colors.ts**, which contains a list of color values throughout the app.
