--- a/docs/scenes/get-started/create-a-project/ProjectStructure/files/hooks.mdx
+++ b/docs/scenes/get-started/create-a-project/ProjectStructure/files/hooks.mdx
@@ -1,3 +1,5 @@
-### hooks
+import { RawH3 } from '~/ui/components/Text';
+
+<RawH3>hooks</RawH3>
 
 Contains [React Hooks](https://react.dev/reference/react/hooks), which allows sharing common behavior between components. For example, `useThemeColor()` is a hook that returns a color based on the current theme.
