--- a/docs/scenes/get-started/create-a-project/ProjectStructure/files/package-json.mdx
+++ b/docs/scenes/get-started/create-a-project/ProjectStructure/files/package-json.mdx
@@ -1,3 +1,5 @@
-### package.json
+import { RawH3 } from '~/ui/components/Text';
+
+<RawH3>package.json</RawH3>
 
 The **package.json** file contains the project's dependencies, scripts and metadata. Anytime a new dependency is added to your project, it will be added to this file.
