--- a/docs/scenes/get-started/create-a-project/TemplateFeatures/features/fonts.mdx
+++ b/docs/scenes/get-started/create-a-project/TemplateFeatures/features/fonts.mdx
@@ -1,3 +1,5 @@
-### Custom fonts
+import { RawH3 } from '~/ui/components/Text';
+
+<RawH3>Custom fonts</RawH3>
 
 Open **app/\_layout.tsx** to see how to load custom fonts.
