--- a/docs/scenes/get-started/create-a-project/TemplateFeatures/features/images.mdx
+++ b/docs/scenes/get-started/create-a-project/TemplateFeatures/features/images.mdx
@@ -1,3 +1,5 @@
-### Images
+import { RawH3 } from '~/ui/components/Text';
+
+<RawH3>Images</RawH3>
 
 For static images, you can use the **@2x** and **@3x** suffixes to provide images for different screen densities.
