--- a/docs/scenes/get-started/create-a-project/TemplateFeatures/features/navigation.mdx
+++ b/docs/scenes/get-started/create-a-project/TemplateFeatures/features/navigation.mdx
@@ -1,3 +1,5 @@
-### File-based routing
+import { RawH3 } from '~/ui/components/Text';
+
+<RawH3>File-based routing</RawH3>
 
 The app has two screens: **app/(tabs)/index.tsx** and **app/(tabs)/explore.tsx**. The layout file in **app/(tabs)/\_layout.tsx** sets up the tab navigator.
