--- a/docs/scenes/get-started/create-a-project/TemplateFeatures/features/platforms.mdx
+++ b/docs/scenes/get-started/create-a-project/TemplateFeatures/features/platforms.mdx
@@ -1,3 +1,5 @@
-### Android, iOS, and Web support
+import { RawH3 } from '~/ui/components/Text';
+
+<RawH3>Android, iOS, and web support</RawH3>
 
 You can open this project on Android, iOS, and the web. To open the web version, press <kbd>w</kbd> in the terminal after running the project.
