start of adding local directions

--- a/docs/scenes/get-started/set-up-your-environment/instructions/iosPhysicalDevelopmentBuild.mdx
+++ b/docs/scenes/get-started/set-up-your-environment/instructions/iosPhysicalDevelopmentBuild.mdx
@@ -1,7 +1,11 @@
 import { Step } from '~/ui/components/Step';
 import { Terminal } from '~/ui/components/Snippet';
 
+import { BuildEnvironmentSwitch } from '../BuildEnvironmentSwitch';
+
 ## Set up an iOS device with a development build
+
+<BuildEnvironmentSwitch type="xcode" />
 
 <Step label="1">
 ### Enroll in the Apple Developer Program
