--- a/docs/scenes/get-started/set-up-your-environment/instructions/androidPhysicalDevelopmentBuild.mdx
+++ b/docs/scenes/get-started/set-up-your-environment/instructions/androidPhysicalDevelopmentBuild.mdx
@@ -1,7 +1,11 @@
 import { Step } from '~/ui/components/Step';
 import { Terminal } from '~/ui/components/Snippet';
 
+import { BuildEnvironmentSwitch } from '../BuildEnvironmentSwitch';
+
 ## Set up an Android device with a development build
+
+<BuildEnvironmentSwitch type="android-studio" />
 
 <Step label="1">
 
