--- a/docs/pages/get-started/start-developing.mdx
+++ b/docs/pages/get-started/start-developing.mdx
@@ -1,6 +1,7 @@
 ---
 title: Start developing
 description: Make your first change to an Expo project and see it live on your device.
+hideTOC: true
 ---
 
 import { Terminal, DiffBlock } from '~/ui/components/Snippet';
