--- a/docs/scenes/get-started/set-up-your-environment/instructions/androidSimulatedExpoGo.mdx
+++ b/docs/scenes/get-started/set-up-your-environment/instructions/androidSimulatedExpoGo.mdx
@@ -1,7 +1,9 @@
+import AndroidStudioInstructions from './_androidStudioInstructions.mdx';
 import AndroidEmulatorInstructions from './_androidEmulatorInstructions.mdx';
 
 ## Set up an Android emulator with Expo Go
 
+<AndroidStudioInstructions />
 <AndroidEmulatorInstructions />
 
 ## Install Expo Go
