--- a/docs/scenes/get-started/set-up-your-environment/instructions/androidSimulatedDevelopmentBuild.mdx
+++ b/docs/scenes/get-started/set-up-your-environment/instructions/androidSimulatedDevelopmentBuild.mdx
@@ -1,10 +1,12 @@
 import { Step } from '~/ui/components/Step';
 import { Terminal } from '~/ui/components/Snippet';
 
+import AndroidStudioInstructions from './_androidStudioInstructions.mdx';
 import AndroidEmulatorInstructions from './_androidEmulatorInstructions.mdx';
 
 ## Set up an Android emulator with a development build
 
+<AndroidStudioInstructions />
 <AndroidEmulatorInstructions />
 
 ## Create a development build
