remove expo.new link for now

--- a/docs/pages/get-started/introduction.mdx
+++ b/docs/pages/get-started/introduction.mdx
@@ -15,16 +15,12 @@ Expo is framework that makes developing Android and iOS apps easier. Our framewo
 
 We also make [Expo Application Services (EAS)](https://expo.dev/eas), a set of services that complement the Expo framework in each step of the development process.
 
-There are two ways to get started making apps with Expo:
+{/* There are two ways to get started making apps with Expo: */}
+
+{/* <BoxLink title="Automated" description="Automate the process of creating a project, setting up your development environment, and configuring automations." href="https://expo.new" Icon={Earth01Icon} /> */}
 
 <BoxLink
-  title="Automated"
-  description="Automate the process of creating a project, setting up your development environment, and configuring automations."
-  href="https://expo.new"
-  Icon={Earth01Icon}
-/>
-<BoxLink
-  title="Manual"
+  title="Quick start"
   description="Read the docs to create a project and set up your development environment."
   href="/get-started/create-a-project"
   Icon={BookOpen02Icon}
