--- a/docs/scenes/get-started/set-up-your-environment/instructions/androidSimulatedDevelopmentBuildLocal.mdx
+++ b/docs/scenes/get-started/set-up-your-environment/instructions/androidSimulatedDevelopmentBuildLocal.mdx
@@ -20,3 +20,5 @@ import AndroidEmulatorInstructions from './_androidEmulatorInstructions.mdx';
 Run the following from your terminal:
 
 <Terminal cmd={['$ npx expo run:android']} />
+
+> This command runs a development server after building your app. You can skip running `npx expo start` on the next page.
