--- a/docs/scenes/get-started/set-up-your-environment/instructions/iosPhysicalExpoGo.mdx
+++ b/docs/scenes/get-started/set-up-your-environment/instructions/iosPhysicalExpoGo.mdx
@@ -1,6 +1,6 @@
 import QRCodeReact from 'react-qr-code';
 
-## iOS device with a Expo Go
+## iOS device with Expo Go
 
 Scan the QR code to download the app from the App Store, or visit the Expo Go page on [the App Store](https://itunes.apple.com/app/apple-store/id982107779).
 
