--- a/docs/pages/get-started/set-up-your-environment.mdx
+++ b/docs/pages/get-started/set-up-your-environment.mdx
@@ -18,7 +18,7 @@ We recommend using a real device to develop, since you'll get to see exactly wha
 
 ## How would you like to develop?
 
-Expo Go is a sandbox for trying out Expo quickly. A development build is a build of your app that includes Expo's developer tools.
+Expo Go is a sandbox for trying out Expo quickly. A development build is a build of your own app that includes Expo's developer tools.
 
 <DevelopmentModeForm />
 
