--- a/docs/pages/get-started/create-a-project.mdx
+++ b/docs/pages/get-started/create-a-project.mdx
@@ -11,12 +11,14 @@ System requirements:
 - [Node.js (LTS)](https://nodejs.org/en/).
 - macOS, Windows (Powershell and WSL 2), and Linux are supported.
 
-We recommend creating a project with the default project template, which includes example code to help get you started. To create a new project, run the following command:
+We recommend starting with the default project created by `create-expo-app`. The default project includes example code to help you get started.
+
+To create a new project, run the following command:
 
 <Terminal cmd={['$ npx create-expo-app@latest']} />
 
-> You can use another template by adding the `--template` flag.
+> You can choose a different template by adding the `--template` flag.
 
-## Next steps
+## Next step
 
 You have a project. Now it's time to set up your development environment so that you can start developing.
