--- a/docs/pages/get-started/set-up-your-environment.mdx
+++ b/docs/pages/get-started/set-up-your-environment.mdx
@@ -26,6 +26,6 @@ Expo Go is a sandbox for trying out Expo quickly. A development build is a build
 
 <DevelopmentEnvironmentInstructions />
 
-## Next steps
+## Next step
 
-You have a project and a development environment. Now it's time start developing.
+You have a project and a development environment. Now it's time to start developing.
