--- a/docs/scenes/get-started/set-up-your-environment/instructions/iosSimulatedExpoGo.mdx
+++ b/docs/scenes/get-started/set-up-your-environment/instructions/iosSimulatedExpoGo.mdx
@@ -6,4 +6,4 @@ import IosSimlatorInstructions from './_iosSimulatorInstructions.mdx';
 
 ## Install Expo Go
 
-When you start a development server with `npx expo start` on the [start developing](/get-started/start-developing) page, press <kbd>i</kbd> to open the iOS simulator. Expo CLI will install Expo Go automatically.
+When you start a development server with `npx expo start` on the [start developing](/get-started/start-developing) page, press <kbd>i</kbd> to open the iOS Simulator. Expo CLI will install Expo Go automatically.
