--- a/docs/pages/get-started/introduction.mdx
+++ b/docs/pages/get-started/introduction.mdx
@@ -11,7 +11,7 @@ import { HelloWave } from '~/scenes/get-started/introduction/HelloWave';
 
 ## Welcome! <HelloWave />
 
-Expo is framework that makes developing Android and iOS apps easier. Our framework provides file-based routing, a standard library of native modules, and much more. Expo is open source with an active community on [GitHub](https://github.com/expo/expo) and [Discord](https://chat.expo.dev).
+Expo is a framework that makes developing Android and iOS apps easier. Our framework provides file-based routing, a standard library of native modules, and much more. Expo is open source with an active community on [GitHub](https://github.com/expo/expo) and [Discord](https://chat.expo.dev).
 
 We also make [Expo Application Services (EAS)](https://expo.dev/eas), a set of services that complement the Expo framework in each step of the development process.
 
@@ -22,6 +22,6 @@ We also make [Expo Application Services (EAS)](https://expo.dev/eas), a set of s
 <BoxLink
   title="Quick start"
   description="Read the docs to create a project and set up your development environment."
-  href="/get-started/create-a-project"
+  href="/get-started/create-a-project/"
   Icon={BookOpen02Icon}
 />
