--- a/docs/scenes/get-started/set-up-your-environment/instructions/_androidStudioEnvironmentInstructions.mdx
+++ b/docs/scenes/get-started/set-up-your-environment/instructions/_androidStudioEnvironmentInstructions.mdx
@@ -2,13 +2,13 @@ import { Step } from '~/ui/components/Step';
 import { Terminal } from '~/ui/components/Snippet';
 import { Tabs, Tab } from '~/ui/components/Tabs';
 
-## Install Node.js, Watchman, and JDK
+## Install Watchman and JDK
 
 <Tabs>
 
 <Tab label='macOS'>
 
-To set up your development environment on macOS for Android, you will install Node.js, Watchman, JDK, and Android Studio.
+To set up your development environment on macOS for Android, you will install Watchman, JDK, and Android Studio.
 
 #### Prerequisites
 
@@ -18,19 +18,13 @@ Use a package manager such as [Homebrew](https://brew.sh/) to install the follow
 
 <Step label="1">
 
-Install the LTS release of Node.js using a [version management tool](https://nodejs.org/en/download/package-manager) such as `nvm` or `volta`. If you have already installed Node.js on your system, make sure the version is 16 or above.
-
-</Step>
-
-<Step label="2">
-
 [Install Watchman](https://facebook.github.io/watchman/docs/install#macos) using a tool such as Homebrew:
 
 <Terminal cmd={['$ brew install watchman']} />
 
 </Step>
 
-<Step label="3">
+<Step label="2">
 
 Install OpenJDK distribution called Azul Zulu using Homebrew. This distribution offers JDKs for both Apple Silicon and Intel Macs.
 
@@ -78,7 +72,7 @@ export JAVA_HOME=/Library/Java/JavaVirtualMachines/zulu-11.jdk/Contents/Home
 
 <Tab label='Windows'>
 
-To set up your development environment on Windows for Android, you will install Node.js, JDK, and Android Studio.
+To set up your development environment on Windows for Android, you will install JDK and Android Studio.
 
 #### Prerequisites
 
@@ -87,16 +81,6 @@ Use a package manager such as [Chocolatey](https://chocolatey.org/) to install t
 #### Install dependencies
 
 <Step label="1">
-
-Install the LTS version of Node.js using Chocolatey:
-
-<Terminal cmd={['$ choco install -y nodejs']} />
-
-If you have already installed Node.js on your system, make sure the version is 18 or above. If you want to be able to switch between different versions, you might want to install Node.js using a version manager such as [`nvm-windows`](https://github.com/coreybutler/nvm-windows).
-
-</Step>
-
-<Step label="2">
 
 Install [Java SE Development Kit (JDK)](https://openjdk.org/):
 
@@ -126,23 +110,17 @@ For SDK 49 and below, install JDK version 11.
 
 <Tab label="Linux">
 
-To set up your development environment on Linux for Android, you will install Node.js, Watchman, JDK, and Android Studio.
+To set up your development environment on Linux for Android, you will install Watchman, JDK, and Android Studio.
 
 #### Install dependencies
 
 <Step label="1">
 
-Install Node.js 18 or above by following [installation instructions for your Linux distribution](https://nodejs.org/en/download/package-manager).
-
-</Step>
-
-<Step label="2">
-
 Follow [installation instructions from the Watchman installation guide](https://facebook.github.io/watchman/docs/install#linux) to compile and install it from the source.
 
 </Step>
 
-<Step label="3">
+<Step label="2">
 
 Install [Java SE Development Kit (JDK)](https://openjdk.org/):
 
