--- a/docs/scenes/get-started/set-up-your-environment/instructions/androidSimulatedDevelopmentBuild.mdx
+++ b/docs/scenes/get-started/set-up-your-environment/instructions/androidSimulatedDevelopmentBuild.mdx
@@ -4,7 +4,7 @@ import { Terminal } from '~/ui/components/Snippet';
 import AndroidStudioInstructions from './_androidStudioInstructions.mdx';
 import AndroidEmulatorInstructions from './_androidEmulatorInstructions.mdx';
 
-## Set up an Android emulator with a development build
+## Set up an Android Emulator with a development build
 
 <AndroidStudioInstructions />
 <AndroidEmulatorInstructions />
@@ -28,7 +28,7 @@ To build your app, you will need to install EAS CLI. You can do this by running 
 To build your app, you will need to create an Expo account and login to the EAS CLI.
 
 1. [Sign up](https://expo.dev/signup) for an Expo account.
-2. Run the following command in your terminal to login to the EAS CLI:
+2. Run the following command in your terminal to log in to the EAS CLI:
    <Terminal cmd={['$ eas login']} />
 
 </Step>
@@ -53,6 +53,8 @@ Run the following command to create a development build:
 <Step label="5">
 ### Install the development build on your emulator
 
-Download the build, then drag and drop the file onto an emulator to install it.
+After the build is complete, the CLI will prompt you to automatically download and install it on the Android Emulator. When prompted, press <kbd>Y</kbd> to directly install it on the emulator.
+
+If you miss this prompt, you can download the build from the link provided in the terminal and drag and drop it onto the Android Emulator to install it.
 
 </Step>
