--- a/docs/scenes/get-started/set-up-your-environment/instructions/iosPhysicalDevelopmentBuild.mdx
+++ b/docs/scenes/get-started/set-up-your-environment/instructions/iosPhysicalDevelopmentBuild.mdx
@@ -10,7 +10,7 @@ import { BuildEnvironmentSwitch } from '../BuildEnvironmentSwitch';
 <Step label="1">
 ### Enroll in the Apple Developer Program
 
-To install a development build on your iOS device, you will need an active subscription to the Apple Developer Program. You can sign up for the Apple Developer Program [here](https://developer.apple.com/programs/).
+To install a development build on your iOS device, you will need an active subscription to the Apple Developer Program. Sign up for the [Apple Developer Program here](https://developer.apple.com/programs/).
 
 </Step>
 
@@ -30,7 +30,7 @@ To build your app, you will need to install EAS CLI. You can do this by running 
 Next, you will need to create an Expo account and login to the EAS CLI.
 
 1. [Sign up](https://expo.dev/signup) for an Expo account.
-2. Run the following command in your terminal to login to the EAS CLI:
+2. Run the following command in your terminal to log in to the EAS CLI:
    <Terminal cmd={['$ eas login']} />
 
 </Step>
@@ -65,9 +65,9 @@ Run the following command to create a development build:
 <Step label="7">
 ### Turn on developer mode
 
-1. Open Settings > Privacy & Security, scroll down to the Developer Mode list item and navigate into it.
-2. Tap the switch to enable Developer Mode. After you do so, Settings presents an alert to warn you that Developer Mode reduces the security of your device. To continue enabling Developer Mode, tap the alert's Restart button.
-3. After the device restarts and you unlock it, the device shows an alert confirming that you want to enable Developer Mode. Tap Turn On, and enter your device passcode when prompted.
+1. Open "Settings" > "Privacy & Security", scroll down to the "Developer Mode" list item and navigate into it.
+2. Tap the switch to enable "Developer Mode". After you do so, Settings presents an alert to warn you that Developer Mode reduces your device's security. To continue enabling "Developer Mode", tap the alert's "Restart" button.
+3. After the device restarts and you unlock it, the device shows an alert confirming that you want to enable Developer Mode. Tap "Turn On", and enter your device passcode when prompted.
 
 </Step>
 
