--- a/docs/scenes/get-started/set-up-your-environment/instructions/iosPhysicalExpoGo.mdx
+++ b/docs/scenes/get-started/set-up-your-environment/instructions/iosPhysicalExpoGo.mdx
@@ -2,7 +2,7 @@ import QRCodeReact from 'react-qr-code';
 
 ## iOS device with Expo Go
 
-Scan the QR code to download the app from the App Store, or visit the Expo Go page on [the App Store](https://itunes.apple.com/app/apple-store/id982107779).
+Scan the QR code to download the app from the App Store, or visit the Expo Go page on the [App Store](https://itunes.apple.com/app/apple-store/id982107779).
 
 <div className="p-4 rounded-lg border border-default inline-block">
   <QRCodeReact value="https://itunes.apple.com/app/apple-store/id982107779" size={228} />
