--- a/docs/scenes/get-started/start-developing/TemplateFeatures/features/themes.mdx
+++ b/docs/scenes/get-started/start-developing/TemplateFeatures/features/themes.mdx
@@ -2,4 +2,4 @@ import { RawH3 } from '~/ui/components/Text';
 
 <RawH3>Light and dark modes</RawH3>
 
-This template has light and dark mode support. The `useColorScheme()` hook lets you inspect what the user's current color scheme is, so that you can adjust UI colors accordingly.
+This template has light and dark mode support. The `useColorScheme()` hook lets you inspect the user's current color scheme, so that you can adjust UI colors accordingly.
